BBmisc_1.9
- New argument suppress.startup for requirePackages

BBmisc_1.8
- Options for the ProgressBar can now be directly passed to the constructor.
- Fixed smaller bugs in normalize

- new functions
-- itostr
-- getRelativePath
-- splitPath
-- do.call2

BBmisc_1.7:
- extractSubList allows for repeated indexing

- new functions:
-- asQuoted
-- collapsef
-- ensureVector
-- explode
-- getAttributeNames
-- getClass1
-- getUsedFactorLevels
-- hasAttributes
-- isSubset, isSuperset
-- makeFileCache
-- normalize
-- setValue
-- optimizeSubInts

BBmisc_1.6:
- the ProgressBar now outputs to stderr by default. But the stream can be configured.
- improve handling of result names (row.names and col.names) in some functions a bit
- convertRowsToList now converts matrices into list of vector by default (see new arg "as.vector")
- rename first, last to which.first, which.last
- improved extractSubList and rowSapply a bit,
  simplification to matrix can be stated in a more readable way.
- new functions:
-- operator %btwn%.
-- convertListOfRowsToDataFrame
-- convertMatrixType
-- convertColsToList
-- v*apply type of functions
-- dapply
-- rangeVal
-- getFirst, getLast
-- symdiff
-- asMatrixCols, asMatrixRows
-- isScalar<Type> family of helper functions
-- sortByCol

BBmisc_1.5:
- removed stringsAsFactors, use convertDataFrameCols
- removed convertDfCols, use convertDataFrameCols
- removed listToShortString, use convertToShortString
- new functions:
-- dropNamed
-- first, last
-- binPack
-- isValidName

BBmisc_1.4:
- renamed convertDfCols to convertDataFrameCols
- deprecated listToShortString, use convertToShortString
- deprecated stringsAsFactors, use convertDataFrameCols
- chunk distributes size of chunks in a better way
- new functions:
-- makeS3Obj
-- getMaxIndex, getMinIndex
-- getMaxIndexOfRows, getMinIndexOfRows, getMaxIndexOfCols, getMinIndexOfCols
-- toRangeStr
-- getOperatingSystem, isWindows, isUnix, isLinux, isDarwin
-- clipString
-- getUnixTime
-- isScalarValue