@@ -1,4 +1,5 @@
 BBmisc_1.9
+- New argument .newline for messagef
 - New argument suppress.startup for requirePackages
 
 BBmisc_1.8
